--- a/prettymeup.css
+++ b/prettymeup.css
@@ -15,15 +15,18 @@
 }
 
 .left{
-  width: 40%;
+  width: 30%;
 }
 
-.left, .right {
-  width: 40%;
+.right {
+  width: 30%;
+}
+.moreright {
+width: 30%;
 }
 
 .middle {
-  width: 20%;
+  width: 10%;
 }
 
 table {
