--- a/prettymeup.css
+++ b/prettymeup.css
@@ -1,6 +1,6 @@
 .buttons {
 
-  background-color: gold;
+  background-color: blue;
 }
 
 
@@ -19,7 +19,7 @@
 }
 
 .right {
-  width: 30%;
+  width: 20%;
 }
 
 .middle {
