--- a/prettymeup.css
+++ b/prettymeup.css
@@ -36,3 +36,23 @@ th {
 td {
   border: 1px solid black;
 }
+
+#stackbits0IND{
+
+display: none;
+}
+
+#stackbits1IND{
+
+display: none;
+}
+
+#stackbits2IND{
+
+display: none;
+}
+
+#stackbits3IND{
+
+display: none;
+}
