--- a/prettymeup.css
+++ b/prettymeup.css
@@ -9,6 +9,12 @@
   box-sizing: border-box;
 }
 
+.row {
+
+  display: flex;
+  flex-wrap: wrap;
+}
+
 /* Create three unequal columns that floats next to each other */
 .column {
   float: left;
