--- a/prettymeup.css
+++ b/prettymeup.css
@@ -20,7 +20,7 @@
   float: left;
   padding: 10px;
 }
-
+/*
 .left{
   width: 30%;
 }
@@ -32,7 +32,7 @@
 .middle {
   width: 10%;
 }
-
+*/
 table {
   border: 1px solid black;
 }
